--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -120,6 +120,7 @@
     <Style x:Key="{x:Type fields:NumericUpDown}" TargetType="{x:Type fields:NumericUpDown}" BasedOn="{StaticResource DefaultNumericUpDownStyle}"/>
     <Style x:Key="{x:Type qrCode:QRCodeControl}" TargetType="{x:Type qrCode:QRCodeControl}" BasedOn="{StaticResource DefaultQRCodeControlStyle}"/>
     <Style x:Key="{x:Type menu:CircleMenu}" TargetType="{x:Type menu:CircleMenu}" BasedOn="{StaticResource CircleMenuStyle}"/>
+    <Style x:Key="{x:Type menu:PopupMenu}" TargetType="{x:Type menu:PopupMenu}" BasedOn="{StaticResource PopupMenuStyle}"/>
     <Style x:Key="{x:Type swiper:Swiper}" TargetType="{x:Type swiper:Swiper}" BasedOn="{StaticResource DefaultSwiperStyle}"/>
     <Style x:Key="{x:Type carousel:CarouselView}" TargetType="{x:Type carousel:CarouselView}" BasedOn="{StaticResource DefaultCarouselViewStyle}"/>
     <Style x:Key="{x:Type player:MediaPlayer}" TargetType="{x:Type player:MediaPlayer}" BasedOn="{StaticResource DefaultMediaPlayerStyle}"/>
